# AOC2025

./: CMakeLists.txt  Day.cpp  Day.h  Day1.cpp  Day1.h  Day2.cpp  Day2.h  Day3.cpp  Day3.h  Day4.cpp  Day4.h  Day5.cpp  Day5.h  Day6.cpp  Day6.h  Day7.cpp  Day7.h  example.txt  main.cpp  utils.cpp  utils.h
